[package]
name = "lr1110-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leftger/lr1110-rs"
categories = ["embedded", "no-std", "asynchronous"]
keywords = ["lr1110", "gnss", "wifi", "lora", "semtech"]
description = "Extended LR1110 functionality (GNSS, WiFi, Crypto, Ranging) for use with lora-phy"
rust-version = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core dependency on lora-phy for base LR1110 support
lora-phy = { git = "https://github.com/leftger/lora-rs", branch = "feat/lr1110-lora-only" }
# For release (once PR is merged):
# lora-phy = { git = "https://github.com/lora-rs/lora-rs" }

# Embedded HAL traits
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1" }

# For no_std collections
heapless = { version = "0.8", default-features = false }

# Optional embassy-time for IRQ management features (matches embassy-stm32 version)
embassy-time = { version = "0.5", optional = true }

# Optional defmt support
defmt = { version = "0.3", optional = true }

[features]
default = ["gnss", "wifi", "crypto", "ranging", "gfsk", "lr_fhss", "system", "bootloader", "regmem"]

## Enable GNSS (GPS/BeiDou) scanning functionality
gnss = []

## Enable advanced IRQ management for GNSS/WiFi (requires embassy-time)
irq-manager = ["dep:embassy-time"]

## Enable WiFi passive scanning functionality
wifi = []

## Enable Crypto Engine (AES, CMAC, key management)
crypto = []

## Enable RTToF (Round-Trip Time of Flight) ranging
ranging = []

## Enable GFSK modulation support
gfsk = []

## Enable LR-FHSS (Long Range Frequency Hopping Spread Spectrum) support
lr_fhss = []

## Enable system diagnostic functions (temperature, voltage, RNG, UID)
system = []

## Enable bootloader functions for firmware update
bootloader = []

## Enable low-level register/memory access
regmem = []

## Use defmt for logging
defmt-03 = ["dep:defmt", "lora-phy/defmt-03"]
