[package]
name = "lr1110-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leftger/lr1110-rs"
categories = ["embedded", "no-std", "asynchronous"]
keywords = ["lr1110", "gnss", "wifi", "lora", "semtech"]
description = "Extended LR1110 functionality (GNSS, WiFi, Crypto, Ranging) for use with lora-phy"
rust-version = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core dependency on lora-phy for base LR1110 support
lora-phy = { git = "https://github.com/lora-rs/lora-rs" }

# Embedded HAL traits
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1" }

# For no_std collections
heapless = { version = "0.8", default-features = false }

# embassy-time for async spin-poll in wait_on_busy (same git source as embassy-stm32)
embassy-time = { git = "https://github.com/embassy-rs/embassy" }

# Optional defmt support
defmt = { version = "0.3", optional = true }

[features]
default = ["gnss", "wifi", "crypto", "ranging", "gfsk", "lr_fhss", "system", "bootloader", "regmem"]

## Enable GNSS (GPS/BeiDou) scanning functionality
gnss = []

## Enable advanced IRQ management for GNSS/WiFi
irq-manager = []

## Enable WiFi passive scanning functionality
wifi = []

## Enable Crypto Engine (AES, CMAC, key management)
crypto = []

## Enable RTToF (Round-Trip Time of Flight) ranging
ranging = []

## Enable GFSK modulation support
gfsk = []

## Enable LR-FHSS (Long Range Frequency Hopping Spread Spectrum) support
lr_fhss = []

## Enable system diagnostic functions (temperature, voltage, RNG, UID)
system = []

## Enable bootloader functions for firmware update
bootloader = []

## Enable low-level register/memory access
regmem = []

## Use defmt for logging
defmt-03 = ["dep:defmt", "lora-phy/defmt-03"]
